--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
         <title>Login Form </title>
         <meta charset="UTF-8">
         <link rel= "stylesheet" href="styles.css">
-<link href="https://fonts.cdnfonts.com/css/milk-peach" rel="stylesheet">
 <link href="https://fonts.cdnfonts.com/css/dalton-marine" rel="stylesheet">
         <meta name ="viewport" content="width=device-width, inital-scale =1.0">
     </head>    
     <body>
-      <h1>But what if it were <span>purple?</span></h1>
-            <div class="container">
-                <h2>Sign in: </h2>
-                <form action="" class="signin form">
-                    <input type="email" name="email" class="box" placeholder="Enter Email">
-                    <input type = "password" name ="password" class="box" placeholder="Please enter password">
-                    <input type="submit" value="Sign In" id="sign-in">
-                </form>
-                <form action="" class="signup form">
-                    <h3>Don't have an account? Sign up today!</h3>
-                    <input type="email" name="new-email" class ="signup box" placeholder="Enter Email">
-                    <input type="password"name="new-password" class="signup box" placeholder="please choose a password">
-                    <input type="submit" value="Sign up" id="sign-up">
-                </form>
-            </div>
+        <header>
+            <h2>We are <h2> <h1><span> A Tech Company</span></h1>
+            <h2>...I think? </h2>
+        </header>
+        <img src="./bg.jpg" alt="corporate art saturn eating their child">
+                <div class="signin">
+                    <form action="" class="signin form">
+                        <label for="email">email</label>
+                        <input type="email" name="email" class="box" placeholder="Email">
+                        <label for="password">password</label>
+                        <input type = "password" name ="password" class="box" placeholder="password">
+                        <input type="submit" value="Sign In" id="login" class="submit">
+                    </form>
+                </div>
+                <div id="blurb">
+                    <p>We're disruptors.</p><p> We <em>disrupt</em> things.</p>
+                    <p>We promote <b>synergy.</b></p>
+                    <p>What does that mean?</p>
+                    <h3>We don't know either.</h3>
+                </div>
+               
+
     </body>
 <script src="https://kit.fontawesome.com/58ae8fb4d5.js" crossorigin="anonymous"></script>
 
